css/style.css
@font-face {
  font-family: Uncracked;
  src: url(../fonts/Uncracked.otf);
}

* {
  box-sizing: border-box;
  margin: 0;
}

html {
  border: 0px solid blue;
  width: 100vw;
}

body {
  background: rgb(17, 19, 36);
  color: aliceblue;
  font-family: Arial;
  height: fit-content;
  position: relative;
  border: 0px solid red;
}

header {
  border: 0px solid blue;
  display: grid;
  grid-template-columns: repeat(3, auto);
  justify-content: space-between;
  align-items: center;
  width: 100%;
  padding: 1rem 2rem;
  position: absolute;
  border-bottom: 0px solid rgba(47, 46, 50, 0.668);
}

#website-name {
  border: 0px solid red;
  text-transform: uppercase;
  font-weight: 200;
  font-size: 1rem;
}

#main-nav,
#footer-nav {
  border: 0px solid red;
  padding-left: 1rem;
  padding-right: 1rem;
  width: 100%;
}

#main-nav ul,
#footer-nav ul {
  display: flex;
  flex-wrap: wrap;
  list-style-type: none;
  padding: 0;
}

#main-nav ul li,
#footer-nav ul li {
  font-size: 1rem;
  padding: 1rem 1.5rem;
}

.bi-search {
  border: 0px solid red;
  border-radius: 50%;
  padding: 0.7rem;
  font-size: 0.9rem;
  background-color: rgba(68, 66, 66, 0.449);
}

main {
  border: 0px solid red;
  height: fit-content;
}

.popular-movie {
  border: 0px solid green;
  position: relative;
  z-index: -1;
}

.popular-movie-img {
  width: 100%;
  height: 100%;
  object-fit: cover;
  -webkit-mask-image: radial-gradient(
    /* width, height */ ellipse 190% 60.8%,
    black 20%,
    transparent 80%
  );
  mask-image: radial-gradient(ellipse 190% 60.8%, black 20%, transparent 80%);
}

.popular-movie-title {
  text-transform: uppercase;
  font-weight: bold;
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
}

.popular-movie-btn {
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, 50%);
}

.genres-container {
  border: 0px solid green;
  display: grid;
  grid-template-columns: 50% 50%;
  margin-left: 1rem;
  margin-right: 1rem;
}

.genres-container h2 {
  grid-column: 1 / -1;
  text-align: center;
}

.action-container {
  border: 0px solid blue;
}

.genre-item {
  border: 0px solid green;
  border-radius: 10px;
  margin: 0.7rem;
}

.genre-title {
  border: 1px solid transparent;
  border-radius: 10px 10px 0 0;
  background-color: rgba(28, 28, 110, 0.143);
}
.genre-title h3 {
  padding: 1.2rem 0 0 1.5rem;
  font-size: 1.4rem;
}
.genre-title p {
  padding: 0 0 0 1.5rem;
  font-size: 0.85rem;
}

.genre-movie-container {
  display: grid;
  grid-template-columns: 50% 50%;
  background-color: rgba(9, 68, 132, 0.271);
  border-radius: 0 0 10px 10px;
  padding: 0.2rem;
}

.genre-movie-container img {
  width: 100%;
  border-radius: 10px;
  padding: 0.2rem;
}

.genre-page-link {
  text-align: center;
}

hr {
  margin: auto;
  width: 50rem;
  border-color: rgba(46, 18, 146, 0.535);
}

.popular-movies-container {
  text-align: center;
}

.popular-movie-image {
  -webkit-mask-image: radial-gradient(
    /* width, height */ ellipse 200% 59%,
    black 20%,
    transparent 80%
  );
  mask-image: radial-gradient(ellipse 200% 59%, black 20%, transparent 80%);
  width: 100%;
  height: 45rem;
  object-fit: cover;
  object-position: left 50% right 50%;
}

.upcoming-movies-container {
  text-align: center;
}
.upcoming-movie-img {
  -webkit-mask-image: radial-gradient(
    /* width, height */ ellipse 200% 59%,
    black 20%,
    transparent 80%
  );
  mask-image: radial-gradient(ellipse 200% 59%, black 20%, transparent 80%);
  width: 100%;
  height: 45rem;
  object-fit: cover;
  object-position: left 50% right 50%;
}

footer {
  border: 0px solid red;
  position: relative;
  border-top: 1px solid rgba(46, 18, 146, 0.535);
}

#footer-nav {
  display: flex;
  border: 0px solid blue;
  justify-content: center;
  margin-top: 1rem;
  margin-bottom: 1rem;
}

#website-copyright {
  border: 0px solid green;
  text-align: center;
  padding-top: 2rem;
  padding-bottom: 2rem;
}

